# codex-gui

./: .gitignore  README.md  atlas_builder_monitor.py  codex_actions.py  codex_agents.py  codex_autopilot.py  codex_brief.py  codex_context.py  codex_devices.py  codex_gui.py  codex_launch_agents.py  codex_launcher.py  codex_mission.py  codex_orchestration.py  codex_palette.py  codex_preflight.py  codex_project.py  codex_prompting.py  codex_quality.py  codex_receipts.py  codex_roadmap.py  codex_runs.py  codex_sessions.py  codex_setup.py  codex_team.py  codex_team_ops.py  codex_visual.py  codex_workstation.py  pyproject.toml  shell.nix
docs/: ATLAS_4_DEVICE_ORCHESTRATION.txt  INSTALL.md  MULTI_DEVICE_ORCHESTRATION.md  PUBLIC_RELEASE.md  RELEASE_NOTES.md  TEAM_ROLES.md
scripts/: atlas-builder-fast.sh  atlas-builder-full-access.sh  atlas-builder-monitor-service.sh  atlas-builder-ops.sh  atlas-builder-start-core-systems.sh  atlas-cockpit-start-release-verify.sh  atlas-main-bootstrap-builder.sh  atlas-mesh-blockers.sh  atlas-mesh-smoke.sh  atlas-sync.sh  ci-gate.sh  codex-team-ops.sh  install-codex-gui-desktop-entry.sh  launch_agents.py  launch_agents.yaml.example  refresh-codex-gui-launcher.sh  run-atlas-builder-monitor.sh
tests/: test_actions.py  test_agents.py  test_autopilot.py  test_brief.py  test_ci_workflows.py  test_context.py  test_devices.py  test_gui_source.py  test_launch_agents.py  test_launcher.py  test_mission.py  test_orchestration.py  test_palette.py  test_preflight.py  test_project.py  test_prompting.py  test_quality.py  test_receipts.py  test_roadmap.py  (+8 more)
(+12 files in other folders)
